<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2015 Emil Suleymanov <suleymanovemil8@gmail.com>

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 3
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->
<resources>
    <string name="app_name">Advanced Settings</string>

    <string name="default_summary_on">On</string>
    <string name="default_summary_off">Off</string>
    <string name="action_settings">Settings</string>
    <string name="force_stop">Force stop</string>
    <string name="uninstallU">Uninstall</string>
    <string name="permissions">Permissions</string>
    <string name="language_input_settings">Language&amp;Input</string>
    <string name="finish">Finish</string>
    <string name="open">Open</string>
    <string name="failed">FAILED!</string>
    <string name="done">DONE!</string>
    <string name="no_perm">No permissions.</string>
    <string name="working">Working…\n</string>

    <string name="license">License</string>

    <string name="license1">Copyright © 2015 Emil Suleymanov</string>
    <string name="license2">Distributed under the GNU GPL v3</string>
    <string name="license3">Source code is available at https://github.com/sssemil/wear_AdvancedSettings .</string>
    <string name="license4">Using WearPreferenceActivity by Denley Bihari(@denley) (https://github.com/denley/WearPreferenceActivity).</string>

    <string name="small_info">Advanced Settings for android wear devices</string>

    <string name="ver">Version</string>
    <string name="display">Display</string>
    <string name="apps">Apps</string>
    <string name="about">About</string>
    <string name="launch_by_default">LAUNCH BY DEFAULT</string>
    <string name="screen_timeout">Screen timeout</string>
    <string name="brightness">Brightness</string>
    <string name="install">Install</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="off">Off</string>
    <string name="turning_off">Turning off…</string>
    <string name="on">On</string>
    <string name="turning_on">Turning on…</string>
    <string name="security">Security</string>
    <string name="alert_on_disconnect">Alert on disconnect</string>
    <string name="forgot_device">Forgot your device?</string>
    <string name="screen_saver_brightness">Screen saver brightness</string>
    <string name="vibrator">Vibration</string>
    <string name="vibration_intensity">Vibration intensity</string>
    <string name="sys_apps">System</string>
    <string name="usr_apps">Installed</string>
    <string name="all_apps">All</string>
    <string name="running_services">Running</string>
    <string name="system_uninstall_warning">YOU ARE GOING TO UNINSTALL A SYSTEM APP! THIS COULD CAUSE SERIOUS DAMAGE AND CANNOT BE UNDONE! YOU\'VE BEEN WARNED!</string>
    <string name="normal_uninstall_warning">YOU ARE GOING TO UNINSTALL AN APP! THIS ACTION CANNOT BE UNDONE! YOU\'VE BEEN WARNED!</string>
    <string name="wait_till_sys">Wait a bit till system updates apps list to see changes</string>
    <string name="wifi">Wi-Fi</string>
    <string name="power_menu">Power menu</string>
    <string name="dev_options">Developer options</string>
    <string name="poweroff">Power off</string>
    <string name="reboot">Reboot</string>
    <string name="recovery">Recovery</string>
    <string name="bootloader">Bootloader</string>
    <string name="warn_no_root">Looks like your watch is not rooted. Root access is required for some features to work.</string>
    <string name="touch_to_wake">Touch to wake screen</string>
    <string name="clear_data">Clear data</string>
    <string name="datetime"><![CDATA[Date & time]]></string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="secs">Second</string>
    <string name="will_reboot_now">Will reboot now…</string>
    <string name="lang_input">System language</string>
</resources>
