<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2015 Emil Suleymanov <suleymanovemil8@gmail.com>

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 3
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<com.sssemil.advancedsettings.util.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.WiFiActivity"
        app:pref_icon="@mipmap/ic_wifi"
        app:pref_key="wifi_settings"
        app:pref_title="@string/wifi" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.BluetoothActivity"
        app:pref_icon="@mipmap/ic_bluetooth"
        app:pref_key="bluetooth_settings"
        app:pref_title="@string/bluetooth" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.DisplaySettingsActivity"
        app:pref_icon="@mipmap/ic_display_settings"
        app:pref_key="display_settings"
        app:pref_title="@string/display" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="English, US (en_US)"
        app:pref_entries="@array/entries_language"
        app:pref_entryValues="@array/values_language"
        app:pref_icon="@mipmap/ic_language_and_input"
        app:pref_key="system_language"
        app:pref_title="@string/lang_input" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.DateTimeSettingsActivity"
        app:pref_icon="@mipmap/ic_clock"
        app:pref_key="datetime_settings"
        app:pref_title="@string/datetime" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.VibratorActivity"
        app:pref_icon="@mipmap/ic_vibrate"
        app:pref_key="vibrator_settings"
        app:pref_title="@string/vibrator" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.SecuritySettingsActivity"
        app:pref_icon="@mipmap/ic_security"
        app:pref_key="security_settings"
        app:pref_title="@string/security" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.pm.AppsSettingsActivity"
        app:pref_icon="@mipmap/ic_apps"
        app:pref_key="apps_settings"
        app:pref_title="@string/apps" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.PowerActivity"
        app:pref_icon="@mipmap/ic_power_settings"
        app:pref_key="power_settings"
        app:pref_title="@string/power_menu" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.DevActivity"
        app:pref_icon="@mipmap/ic_dev"
        app:pref_key="dev_settings"
        app:pref_title="@string/dev_options" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.LicenseActivity"
        app:pref_icon="@mipmap/ic_opensource"
        app:pref_key="license_settings"
        app:pref_title="@string/license" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.AboutActivity"
        app:pref_icon="@mipmap/ic_information"
        app:pref_key="about_settings"
        app:pref_title="@string/about" />

</com.sssemil.advancedsettings.util.preference.PreferenceScreen>
