<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2015 Emil Suleymanov <suleymanovemil8@gmail.com>

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 3
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<com.sssemil.advancedsettings.util.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sssemil.advancedsettings.util.preference.BooleanPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="false"
        app:pref_icon="@mipmap/ic_cloud_outline"
        app:pref_iconOff="@mipmap/ic_cloud_outline_grey600"
        app:pref_iconOn="@mipmap/ic_cloud_outline"
        app:pref_key="alert_on_disconnect"
        app:pref_summaryOff="@string/off"
        app:pref_summaryOn="@string/on"
        app:pref_title="@string/alert_on_disconnect" />

</com.sssemil.advancedsettings.util.preference.PreferenceScreen>
