<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2015 Emil Suleymanov <suleymanovemil8@gmail.com>

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 3
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<com.sssemil.advancedsettings.util.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_year"
        app:pref_entryValues="@array/entries_year"
        app:pref_icon_vis="false"
        app:pref_key="year_settings"
        app:pref_title="@string/year" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_month"
        app:pref_entryValues="@array/values_month"
        app:pref_icon_vis="false"
        app:pref_key="month_settings"
        app:pref_title="@string/month" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_day"
        app:pref_entryValues="@array/entries_day"
        app:pref_icon_vis="false"
        app:pref_key="day_settings"
        app:pref_title="@string/day" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_hour24"
        app:pref_entryValues="@array/entries_hour24"
        app:pref_icon_vis="false"
        app:pref_key="hour24_settings"
        app:pref_title="@string/hour" />

    <!--<com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_hour12"
        app:pref_entryValues="@array/entries_hour12"
        app:pref_icon_vis="false"
        app:pref_key="hour12_settings"
        app:pref_title="Hour12" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_hour12ampm"
        app:pref_entryValues="@array/values_hour12ampm"
        app:pref_icon_vis="false"
        app:pref_key="hour12ampm_settings"
        app:pref_title="AM/PM" />-->

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_minute"
        app:pref_entryValues="@array/entries_minute"
        app:pref_icon_vis="false"
        app:pref_key="minute_settings"
        app:pref_title="@string/minute" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_entries="@array/entries_minute"
        app:pref_entryValues="@array/entries_minute"
        app:pref_icon_vis="false"
        app:pref_key="seconds_settings"
        app:pref_title="@string/secs" />

    <!--<com.sssemil.advancedsettings.util.preference.BooleanPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_icon_vis="false"
        app:pref_defaultValue="true"
        app:pref_key="use_24"
        app:pref_summaryOff="1:00 PM"
        app:pref_summaryOn="13:00"
        app:pref_title="Use 24-hour format" />-->

</com.sssemil.advancedsettings.util.preference.PreferenceScreen>
