<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2015 Emil Suleymanov <suleymanovemil8@gmail.com>

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 3
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->

<com.sssemil.advancedsettings.util.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="10000"
        app:pref_entries="@array/entries_screen_timeout"
        app:pref_entryValues="@array/values_screen_timeout"
        app:pref_icon="@mipmap/ic_timelapse"
        app:pref_key="screen_timeout_settings"
        app:pref_title="@string/screen_timeout" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.BrightnessActivity"
        app:pref_icon="@mipmap/ic_brightness"
        app:pref_key="brightness_settings"
        app:pref_title="@string/brightness" />

    <com.sssemil.advancedsettings.util.preference.ButtonPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_activity="com.sssemil.advancedsettings.ScreenSaverBrightnessActivity"
        app:pref_icon="@mipmap/ic_brightness"
        app:pref_key="screen_saver_brightness_settings"
        app:pref_title="@string/screen_saver_brightness" />

    <!--<com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="120"
        app:pref_entries="@array/entries_brightness"
        app:pref_entryValues="@array/entries_brightness"
        app:pref_icon="@mipmap/ic_brightness"
        app:pref_key="brightness_settings"
        app:pref_title="@string/brightness" />

    <com.sssemil.advancedsettings.util.preference.ListPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="100"
        app:pref_entries="@array/entries_brightness"
        app:pref_entryValues="@array/entries_brightness"
        app:pref_icon="@mipmap/ic_brightness"
        app:pref_key="screen_saver_brightness_settings"
        app:pref_title="@string/screen_saver_brightness" />-->

    <com.sssemil.advancedsettings.util.preference.BooleanPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="true"
        app:pref_icon="@mipmap/ic_watch_import"
        app:pref_iconOff="@mipmap/ic_watch_import"
        app:pref_iconOn="@mipmap/ic_watch_import"
        app:pref_key="touch_to_wake_screen"
        app:pref_summaryOff="Off"
        app:pref_summaryOn="On"
        app:pref_title="@string/touch_to_wake" />

    <!--<com.sssemil.advancedsettings.util.preference.BooleanPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:pref_defaultValue="true"
        app:pref_icon="@mipmap/ic_tilt"
        app:pref_iconOff="@mipmap/ic_tilt"
        app:pref_iconOn="@mipmap/ic_tilt"
        app:pref_key="tilt_to_wake_screen"
        app:pref_summaryOff="Off"
        app:pref_summaryOn="On"
        app:pref_title="Tilt to wake screen" />-->

</com.sssemil.advancedsettings.util.preference.PreferenceScreen>
